# AZURE

./: .gitignore  DockerFile  Dockerfile  Final Domain Architecture.docx  README.md  justfile  llm-gpu-trainer_key.pem  makefile  pyproject.toml
data/: credit_risk_dataset.jsonl
scripts/: dataset_generator.py  lang.py  test_model.py  train.py
